--- a/index.html
+++ b/index.html
@@ -3,6 +3,6 @@
     <title>Moja nowa strona</title>
   </head>
   <body>
-    <h1>Hura! Jestem w Internecie!</h1>
+    <h1>Działam!</h1>
   </body>
 </html>
